# corpus_helpers

./: .gitignore  README.md  pyproject.toml  requirements.txt
corpus_helpers/: __init__.py  filemgmt.py  metrics.py  partition.py  read.py  tokenizers2.py  vocab.py
notebooks/: bible_all_metrics.ipynb  bible_bpe_overlap_diagnosis.ipynb  bible_domain_distance.ipynb  bible_ncd.ipynb  bible_ncd_diagnosis.ipynb  morpho_alignment_demo.ipynb  partition_demo.ipynb
notebooks/test_topic_model/: model.pkl  vectorizer.pkl
tests/: test_metrics.py  test_read.py  test_vocab.py
tests/fixtures/: doc_b.txt  doc_c.txt
