[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corpus-helpers"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "tokenizers",
    "picky_bpe @ git+https://github.com/hrasto/picky_bpe.git",
    "morfessor",
    "tqdm",
    "numpy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
kmeans = ["k-means-constrained"]

[tool.setuptools.packages.find]
where = ["."]
